# tatenda.Empower6G

./: README.md  calico.yaml  init-k8s.sh  install-k8s.sh  k8-correct.sh  rain_region_autoencoder.py  realtime_detector.py  remove-k8s.sh  run_k8s_setup.py  scrap.py  server.py  setupk8.py  transfer_metrics.py  update_ips.py  values.yaml
5gMag working in office/: af-depl.yaml  ap-depl.yaml  as-depl.yaml
NEFwQoS/: nef-qod-deployment.yaml  qosS-values.txt  update-qosS-jar.sh  update-qosS.sh
NEFwQoS/ASSessionWithQoS/: Dockerfile
api.important for dynamic purposescs for tatendaupcnef-dynamic:latest/: pom.xml
home/: README.md  upf-depl.yaml
home/DE-engine/: Dockerfile
home/NEF/: .env  LICENSE  README.md  core-crowler.depl.yaml  db_entries_event_report.py  db_entries_imsi.py  db_entries_polygon.py  docker-compose.yaml  mongo.py  nef-deployment.yam  nef-deployment.yaml  try.py
home/NEF/core_crowler/: .gitignore  Dockerfile  README.md  entrypoint.py  pyproject.toml
home/NEF/core_crowler/src/core_crowler/: __init__.py
home/NEF/core_crowler/src/core_crowler/cores/O5GS/location/: log_fetching.py  log_parser.py  log_simulator.py
home/NEF/core_crowler/src/core_crowler/middleware/: o5gs.py
home/NEF/core_crowler/src/core_crowler/runners/: .run_l.swp  last.py  ok.py  run_loc_crowler.py  run_sim.py  that.py
home/NEF/core_crowler/src/core_crowler/utils/: logger.py
home/application/: Chart.yaml  af-cmap.yaml  ap-depl.yaml  nef-cmap.yaml  nef-depl.yaml
home/monitoring/: dashboar.json  values.yaml  (+3 more)
lab/: README.md  sbi.py
this was close but lets redo/: upadte.py
(+318 files in other folders)
